fix: Readability for mobile

--- a/styles/mobile-styles.css
+++ b/styles/mobile-styles.css
@@ -39,12 +39,8 @@
         padding: 2vw;
         font-size: 25px;
     }
-    main {
-        display: flex;
-        justify-content: center;
-    }
     .page.home {
-        width: 90%;
+        width: 100%;
         height: 100%;
         flex-direction: column;
         justify-content: flex-start;
@@ -53,17 +49,6 @@
     }
     .page.home::-webkit-scrollbar {
         display: none;
-        width: 15px;
-        background: var(--color-darker);
-        border-radius:10px;
-    }
-    .page.home::-webkit-scrollbar-thumb {
-        background: var(--color-medium2);
-        border: 2px solid var(--color-dark);
-        border-radius: 10px;
-    }
-    .page.home::-webkit-scrollbar-thumb:active {
-        background: var(--color-highlight);
     }
     .page.home > .left,
     .page.home > .right {
@@ -109,6 +94,42 @@
         height: 100%;
         padding: 2vw;
         font-size: 25px;
+    }
+    main {
+        height: 70%;
+    }
+    footer {
+        font-size: 16px;
+    }
+    footer .icon-container {
+        height: 80%;
+    }
+    .copyright-text {
+        display: none;
+    }
+}
+
+@media (max-width: 620px) {
+    header {
+        flex-direction: column;
+        gap: 1vh;
+        height: 20%;
+    }
+    .logo > .logo-name {
+        font-size: 30px;
+    }
+    .logo > .logo-slogan {
+        font-size: 14px;
+    }
+    .navButtons {
+        width: 100%;
+        max-height: 40%;
+        gap: max(10%);
+    }
+    .navButtons button {
+        height: 100%;
+        padding: 2vw;
+        font-size: 20px;
     }
     main {
         height: 70%;
